--- a/front/index.html
+++ b/front/index.html
@@ -57,14 +57,27 @@
 
             <p>Please try to switch between different accounts in your wallet if your wallet supports this functonality.</p>
 
-			<p id="nameContainer"></p>
-			<div class="form-group">
-				<label for="setNameInput">BlockChain - Set Name</label>
-				<input type="text" class="form-control" id="setNameInput" placeholder="Enter new name">
-				<small id="emailHelp" class="form-text text-muted">This will cost some fee(s)</small>
-			</div>
-			<button type="submit" id="setNameButton" class="btn btn-primary">Submit</button>
-			
+            <p id="nameContainer"></p>
+            <div class="form-group">
+              <label for="setNameInput">BlockChain - Set Name</label>
+              <input type="text" class="form-control" id="setNameInput" placeholder="Enter new name">
+              <small id="emailHelp" class="form-text text-muted">This will cost some fee(s)</small>
+            </div>
+            <button type="submit" id="setNameButton" class="btn btn-primary">Submit</button>
+            
+            <div id="player">
+              <p>
+                <strong>Player Name: </strong> <span id="player-name"></span>
+                <strong>Balance: </strong> <span id="player-balance"></span>
+                <strong>Fighter: </strong> <span id="figther-name"></span>
+              </p>
+
+              <p>
+                <strong>Selected account:</strong> <span id="selected-account"></span>
+              </p>
+
+            </div>
+
           </div>
 
         </div>
